--- a/style.css
+++ b/style.css
@@ -76,13 +76,12 @@ section{
   width: 33vw;
   height: 33vw;
   padding: 3vh;
-  /*background: url('img/debut_light.png') repeat;*/
   background: #fff;
   /*outline: 3px dashed #31302b;
 	outline-offset: -8px;*/
   transition: 0.25s;
   -webkit-transition: 0.25s;
-    box-shadow: 5px 5px 10px #252525;
+  box-shadow: 5px 5px 10px #252525;
 }
 
 #map{
@@ -138,7 +137,7 @@ h2{
 #zoom_form input[type="radio"]:checked + label{
   color: #fff;
 	border-color: #4885ed;
-  box-shadow: inset 0 -5vh 0 #4885ed;
+  box-shadow: inset 0 -7vh 0 #4885ed;
 }
 
 #follow_form>p{
@@ -218,23 +217,34 @@ h2{
   top: 150%;
   left: 50%;
   padding: 3vh;
+  width: 66vh;
   background: #fff;
+  box-shadow: 5px 5px 10px #252525;
   transform: translate(-50%,-50%);
   -webkit-transform: translate(-50%,-50%);
   transition: all 0.5s 0.3s;
-  -webkit-transitioon: all 0.5s 0.3s;
+  -webkit-transition: all 0.5s 0.3s;
+  /*outline: 0.2vh solid #31302b;
+	outline-offset: -8px;*/
+  z-index: 25;
 }
 #preview>p{
-  margin: 1vh;
-  padding: 0.5vh 0.5vw;
-  background: rgba(0,0,0,0.1);
+  margin: 0 0 1vh 0;
+  padding: 0;
   font-size: 2.7vh;
+  font-family: Georgia;
 }
 #preview img{
-  width: 50vh;
+  display: block;
+  width: 100%;
   height: auto;
+  margin: 0 auto;
 }
 #preview div{
+  /*position: absolute;
+  bottom: -20%;
+  left: 0;
+  width: 100%;*/
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-end;
@@ -256,4 +266,64 @@ h2{
 }
 #preview div p:last-child{
   background: #3cba54;
+}
+
+.hashtag{
+  font-weight: bold;
+  color: #4885ed;
+}
+
+.loading{
+	/*display: flex;*/
+  display: none;
+	flex-flow: row wrap;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	width: 60px;
+	height: 60px;
+	margin: -30px 0 0 -30px;
+	background: transparent;
+  z-index: 22;
+}
+.loading div{
+	height: 20px;
+	width: 20px;
+	margin: 0;
+	background: #31302b;
+	opacity: 0;
+	transform: translateY(-20px);
+	-webkit-transform: translateY(-20px);
+  	animation: box_fusion 3.2s ease infinite;
+  	-moz-animation: box_fusion 3.2s ease infinite;
+  	-webkit-animation:  box_fusion 3.2s ease infinite;
+}
+.loading div:nth-child(1){animation-delay: 1200ms;}
+.loading div:nth-child(2){animation-delay: 1400ms;}
+.loading div:nth-child(3){animation-delay: 1600ms;}
+.loading div:nth-child(4){animation-delay: 600ms;}
+.loading div:nth-child(5){animation-delay: 800ms;}
+.loading div:nth-child(6){animation-delay: 1000ms;}
+.loading div:nth-child(8){animation-delay: 200ms;}
+.loading div:nth-child(9){animation-delay: 400ms;}
+
+
+
+@keyframes box_fusion{
+    0%,100%{transform: translateY(-20px); -webkit-transform: translateY(-20px); opacity: 0;}
+	10%{transform: translateY(0px); -webkit-transform: translateY(0px); opacity: 1;}
+	80%{transform: translateY(0px); -webkit-transform: translateY(0px); opacity: 1;}
+	90%{transform: translateY(20px); -webkit-transform: translateY(20px); opacity: 0;}
+}
+@-moz-keyframes box_fusion{
+    0%,100%{transform: translateY(-20px); -webkit-transform: translateY(-20px); opacity: 0;}
+	10%{transform: translateY(0px); -webkit-transform: translateY(0px); opacity: 1;}
+	80%{transform: translateY(0px); -webkit-transform: translateY(0px); opacity: 1;}
+	90%{transform: translateY(20px); -webkit-transform: translateY(20px); opacity: 0;}
+}
+@-webkit-keyframes box_fusion{
+    0%,100%{transform: translateY(-20px); -webkit-transform: translateY(-20px); opacity: 0;}
+	10%{transform: translateY(0px); -webkit-transform: translateY(0px); opacity: 1;}
+	80%{transform: translateY(0px); -webkit-transform: translateY(0px); opacity: 1;}
+	90%{transform: translateY(20px); -webkit-transform: translateY(20px); opacity: 0;}
 }
