--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ header{
   position: relative;
   width: 100%;
   height: 11%;
-  min-height: 52px;
   margin: 0;
   padding: 0;
   background: #4885ed;    /* 3f51b5 */
@@ -38,12 +37,12 @@ h2{
   margin: 10px 0;
   color: #4885ed;
   text-align: center;
-  font-size: 4vh;
+  font-size: 1.4em;
 }
 
 section{
   position: relative;
-  padding: 3vh;
+  padding: 1.5vw;
   background: #fff;
   /*outline: 3px dashed #31302b;
 	outline-offset: -8px;*/
@@ -56,8 +55,8 @@ section{
   position: absolute;
   top: 50%;
   left: 1%;
-  width: 9vh;
-  height: 9vh;
+  height: 80%;
+  width: auto;
   transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
 }
@@ -66,6 +65,7 @@ section{
   position: absolute;
   top: 50%;
   left: 50%;
+  height: 90%;
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
@@ -74,12 +74,11 @@ section{
   -webkit-transform: translate(-50%,-50%);
 }
 #location img{
-  width: 8vh;
-  height: 8vh;
-  margin: 10px;
+  height: 90%;
+  width: auto;
+  margin: 0 10px;
 }
 #location p{
-  width: 25vh;
   margin: 5px 0;
   padding: 0;
   font-size: 2vh;
@@ -91,13 +90,20 @@ section{
   position: absolute;
   top: 50%;
   right: 0;
+  /*width: 280px;*/
+  height: 90%;
   display: flex;
   flex-flow: row nowrap;
+  justify-content: space-between;
   align-items: center;
-  transform: translate(68%, -50%);
-  -webkit-transform: translate(68%, -50%);
+  transform: translate(205px, -50%);
+  -webkit-transform: translate(205px, -50%);
 	transition: all 0.25s;
 	-webkit-transition: all 0.25s;
+}
+#debug.hidden{
+transform: translate(0, -50%);
+-webkit-transform: translate(0, -50%);
 }
 
 #debug_button label{
@@ -126,15 +132,22 @@ section{
 #debug_slider{
   display: flex;
   flex-flow: column nowrap;
-  margin: 0 0 0 1vw;
-  padding: 0 0 0 1vw;
-  /*border-left: 1px solid #fff;*/
+  width: 200px;
+  margin: 0 0 0 10px;
+  padding: 0;
+}
+
+#debug_slider>div{
+  padding: 0 10px;
+  width: 100%;
 }
 #debug_slider label, #debug_slider output{
-  font-size: 2.5vh;
+  font-size: 0.8em;
   color: #fff;
 }
 #debug_slider input{
+  width: 90%;
+  margin: 0 auto;
   appearance: none;
 	-moz-appearance: none;
 	-webkit-appearance: none;
@@ -154,7 +167,7 @@ section{
 
 #map_wrap{
   width: 55%;
-  height: 90%;
+  height: 85%;
 }
 #map{
   height: 100%;
@@ -172,7 +185,7 @@ section{
 }
 
 #follow_option>p{
-  font-size: 2.7vh;
+  font-size: 1.2em;
 }
 
 #tweet_button{
@@ -181,7 +194,7 @@ section{
   margin: 10% auto 0 auto;
   text-align: center;
   text-transform: uppercase;
-  font-size: 3.2vh;
+  font-size: 1.1em;
   color: #3cba54;
   background: #fff;
   border: 0.5vh solid #3cba54;
@@ -209,7 +222,7 @@ section{
   position: absolute;
   top: 150%;
   left: 50%;
-  padding: 3vh;
+  padding: 1.5vw;
   width: 66vh;
   background: #fff;
   box-shadow: 5px 5px 10px #252525;
@@ -224,7 +237,7 @@ section{
 #preview>p{
   margin: 0 0 1vh 0;
   padding: 0;
-  font-size: 2.7vh;
+  font-size: 1.2em;
   font-family: Georgia;
 }
 #preview img{
@@ -233,11 +246,8 @@ section{
   height: auto;
   margin: 0 auto;
 }
+
 #preview div{
-  /*position: absolute;
-  bottom: -20%;
-  left: 0;
-  width: 100%;*/
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-end;
@@ -249,7 +259,7 @@ section{
   margin: 5px;
   padding: 0.4vh 0.8vw;
   color: #fff;
-  font-size: 3vh;
+  font-size: 1.2em;
   cursor: pointer;
   border-radius: 5px;
 }
@@ -282,7 +292,7 @@ section{
 	position: relative;
 	margin: 0;
 	padding: 0.6vh 0.5vw;
-  font-size: 3vh;
+  font-size: 1.3em;
   color: #000;
 	cursor: pointer;
   border: 3px solid rgba(0,0,0,0);
@@ -297,7 +307,7 @@ section{
 .input_option input[type="radio"]:checked + label{
   color: #fff;
 	border-color: #4885ed;
-  box-shadow: inset 0 -7vh 0 #4885ed;
+  box-shadow: inset 0 -10vh 0 #4885ed;
 }
 
 
@@ -373,9 +383,9 @@ section{
 	opacity: 0;
 	transform: translateY(-20px);
 	-webkit-transform: translateY(-20px);
-  	animation: box_fusion 2.4s ease infinite;
-  	-moz-animation: box_fusion 2.4s ease infinite;
-  	-webkit-animation:  box_fusion 2.4s ease infinite;
+	animation: box_fusion 3.4s ease infinite;
+	-moz-animation: box_fusion 3.4s ease infinite;
+	-webkit-animation:  box_fusion 3.4s ease infinite;
 }
 .loading div:nth-child(1){animation-delay: 900ms;}
 .loading div:nth-child(2){animation-delay: 1050ms;}
@@ -386,6 +396,40 @@ section{
 .loading div:nth-child(8){animation-delay: 150ms;}
 .loading div:nth-child(9){animation-delay: 300ms;}
 
+
+@media(max-width: 900px){
+  html, body{
+    font-size: 0.8em;
+  }
+  header h1{
+    display: none;
+  }
+
+  #map_wrap{
+    width: 50%;
+    height: 85%;
+  }
+
+  #option_wrap{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+    width: 40%;
+    height: 80%;
+  }
+
+  #debug{
+    transform: translate(155px, -50%);
+    -webkit-transform: translate(155px, -50%);
+  }
+
+  #debug_slider{
+    width: 150px;
+  }
+  #debug_slider label, #debug_slider output{
+    font-size: 0.7em;
+  }
+}
 
 
 @keyframes box_fusion{
